# fastAPI_backend_project

./: .coverage  .env  .env.exemple  .gitignore  README.md  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 7f5466a497a5_create_users_table.py  9c7d03a7acdd_add_updated_at_to_users.py
src/fastapi_course/: app.py  database.py  models.py  schemas.py  settings.py
src/static_files/: index.html
src/static_files/pages/: atualizacao.html  cadastro.html  carros.html  consulta.html  contato.html  delete.html  login.html  pos_login.html  sobre.html
src/static_files/src/css/: cadastro.css  delete.css  post_login.css  styles.css  styles1.css
src/static_files/src/js/: script.js  script_post_login.js
tests/: conftest.py  test_app.py  test_db.py
